# Bakalarka---CLEAN

./: .gitignore  Downloads - Shortcut.lnk  FILE_STRUCTURE.md  IDEAS.txt  NOTES.txt  POSTUP.txt  README.md  Sprite_Acknowledgements.txt  ZDROJE.txt
Books/: TODO.txt
Simulation/: .CharacterBody2D.gd.swp  .TileMap.gd.swp  export_presets.cfg  project.godot  rust.gdextension
Simulation/PARAMS/: example_CSV_init  test  test2
Simulation/SCENES/: Bush_1.tscn  Bush_2.tscn  Cadaver.tscn  FoodCrop.tscn  Simulation.tscn  StartSimulationGUI.tscn  Tree_1.tscn  Tree_2.tscn  UI_42D1.tmp  UI_Statistics.tscn  Vegetation.tscn  animal.tscn  camera.tscn  carnivore.tscn  character_body_2d.tscn  herbivore.tscn  map.tscn  npc.tscn  player.tscn  sim_params.tscn  tile_map.tscn  tile_map_layer.tscn  tile_map_old.tscn  unit_tests.tscn  worE81B.tmp  world_scene.tscn
Simulation/Sprites/: Carnivore.png.import  Herbivore.png.import  MapSprites.png.import  Map_Sprites.png.import  New Piskel (1).png.import  PlayerSprite.png.import  Whittaker_Hexagons.png.import  assets_spritesheet_v2_free.png.import  depleted_land_tile.png.import  land_tile.png.import  terrain_tiles_v2.png.import  trees.png.import  water_tile.png.import
Visualization/: visualizer.py
WorldGenerator/: MapSprites.png.import  WorldGenerator.gd  WorldGenerator.tscn  icon.svg.import  project.godot  tile_map.tscn
pdf_papers/: Karl Sims_ Artifical Evolution for Computer Graphics.html
rust/simulation/: Cargo.toml
rust/simulation/src/: IDEAS  animal.rs  genes.rs  lib.rs  map.rs  structs.rs  utils.rs
(+70 files in other folders)
